Fix JVM module restrictions on testFX